# crosscrm

./: .gitignore  CRM_LOGIC_IMPROVEMENTS.md  LOGIC_ANALYSIS.md  README.md  ROADMAP.md  TODO.md  alembic.ini  config.py  main.py  requirements.txt  seed_data.py  test_db.py
agent/: __init__.py  forecasting_agent.py  insight_agent.py  recommendation_agent.py  sales_assistant.py
alembic/: env.py
crm-backend/: .editorconfig  .env.example  .gitignore  CRM_BEST_PRACTICES_TODO.md  CRM_COMPARISON_REPORT.md  Directory.Build.props  EMAIL_SYSTEM_API_DOCUMENTATION.md  FRONTEND_INTEGRATION_CONFIG.md  Program.cs  README.md  SALES_HIERARCHY_GUIDE.md  USER_INVITATION_API_DOCUMENTATION.md  USER_INVITATION_ENHANCEMENTS.md  code-analysis.ruleset  global.json  (+3 more)
crm-fastapi/: .gitignore  STRUCTURE_ANALYSIS.md  pyproject.toml  setup_postgresql.sh
crm-fastapi/crm-agent/: .env.production.template  CLEAN_STRUCTURE.md  INDEX.md  PROJECT_CLEANUP_REPORT.md  README.md  STRUCTURE_REFERENCE.md  check_openai_setup.py  pytest.ini  requirements.txt  setup_postgresql.sh  test_chat_interface.html  test_database.py
crm-fastapi/crm-agent/app/: __init__.py  main.py
crm-fastapi/crm-agent/app/agent/: __init__.py  orchestrator.py  prompts.py  scheduler.py
crm-fastapi/crm-agent/app/api/: routes.py
crm-fastapi/crm-agent/app/config/: settings.py
crm-fastapi/crm-agent/app/core/: dependencies.py  exceptions.py  graphql_client.py  middleware.py
crm-fastapi/crm-agent/app/db/: crud.py  database.py  models.py
crm-fastapi/crm-agent/app/modules/agent/dto/: __init__.py  agent_dto.py
crm-fastapi/crm-agent/app/modules/agent/services/: __init__.py  agent_service.py  graphql_data_service.py
crm-fastapi/crm-agent/app/modules/chat/dto/: __init__.py  chat_dto.py
crm-fastapi/crm-agent/app/modules/chat/services/: __init__.py  chat_service.py
crm-fastapi/crm-agent/docs/: API.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  RESTRUCTURE.md  SETUP.md
crm-fastapi/crm-agent/docs/archive/: COMPLETION_SUMMARY.md  ERROR_FIX.md  ERROR_FIX_SUMMARY.md  INTEGRATION_SUMMARY.md  LLM_CONVERSATIONAL_FIX.md  LLM_FIX.md  REFACTORING_SUMMARY.md  SETUP_BACKEND.md  SETUP_OPENAI.md  TESTING.md  TEST_RESULTS.md
crm-fastapi/crm-agent/docs/deployment/: DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FILES.txt  DEPLOYMENT_MAP.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_README.md  DEPLOYMENT_STATUS.md
crm-fastapi/crm-agent/docs/guides/: QUICK_START.md
crm-fastapi/crm-agent/static/: app.js  index.html  styles.css
crm-fastapi/crm-agent/tests/: conftest.py
crm-fastapi/crm-agent/tests/integration/: test_endpoints.py  test_graphql_integration.py
crm-fastapi/crm-agent/tests/unit/services/: test_agent_service.py  test_chat_service.py
crm-fastapi/docker/: Dockerfile  docker-compose.yml
(+497 files in other folders)
